chore: remove windsurf support and expand PR labeler
- Remove .windsurf/skills/ symlinks — Windsurf is not supported
- Add note to pull-reviews.md: do not add .windsurf/ when installing skills
- Expand pr-labeler.yml to detect:
  - skills: .agents/skills/, .claude/skills/, skills-lock.json
  - docs: apps/docs/, docs/, .claude/guides/, CLAUDE.md, README.md files
  - ci: .github/ changes

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -33,13 +33,23 @@ jobs:
           # Check special directories (apps)
           STORYBOOK_CHANGED=false
           DOCS_CHANGED=false
+          SKILLS_CHANGED=false
+          CI_CHANGED=false
 
           if echo "$CHANGED_FILES" | grep -qE '^apps/storybook/|\.stories\.tsx$'; then
             STORYBOOK_CHANGED=true
           fi
 
-          if echo "$CHANGED_FILES" | grep -q '^apps/docs/'; then
+          if echo "$CHANGED_FILES" | grep -qE '^apps/docs/|^docs/|^\.claude/guides/|^CLAUDE\.md$|README\.md$'; then
             DOCS_CHANGED=true
+          fi
+
+          if echo "$CHANGED_FILES" | grep -qE '^\.agents/skills/|^\.claude/skills/|^skills-lock\.json$'; then
+            SKILLS_CHANGED=true
+          fi
+
+          if echo "$CHANGED_FILES" | grep -qE '^\.github/'; then
+            CI_CHANGED=true
           fi
 
           # Build JSON array of changed packages
@@ -58,6 +68,14 @@ jobs:
 
           if [ "$DOCS_CHANGED" = true ]; then
             CHANGED_PACKAGES=$(echo "$CHANGED_PACKAGES" | jq '. += ["docs"]')
+          fi
+
+          if [ "$SKILLS_CHANGED" = true ]; then
+            CHANGED_PACKAGES=$(echo "$CHANGED_PACKAGES" | jq '. += ["skills"]')
+          fi
+
+          if [ "$CI_CHANGED" = true ]; then
+            CHANGED_PACKAGES=$(echo "$CHANGED_PACKAGES" | jq '. += ["ci"]')
           fi
 
           echo "Detected packages: $(echo $PACKAGES | tr '\n' ', ')"
