--- a/.github/workflows/test-changed-packages.yml
+++ b/.github/workflows/test-changed-packages.yml
@@ -5,16 +5,24 @@ on:
     branches: [main]
   push:
     branches: [main]
+  workflow_run:
+    workflows: ["Auto Changeset"]
+    types: [completed]
 
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    concurrency:
+      group: test-${{ github.event.workflow_run.head_branch || github.head_ref || github.ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
@@ -52,10 +60,15 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    concurrency:
+      group: lint-${{ github.event.workflow_run.head_branch || github.head_ref || github.ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
