ci: fix workflows not running on Dependabot PRs
- Skip auto-changeset for Dependabot PRs (dep bumps don't need changesets
  and Dependabot uses a read-only token that can't push)
- Fix checkout ref in test/lint jobs to fall back to github.sha when
  workflow_run.head_sha is empty (direct pull_request trigger path)

--- a/.github/workflows/auto-changeset.yml
+++ b/.github/workflows/auto-changeset.yml
@@ -15,12 +15,15 @@ jobs:
       pull-requests: write
       statuses: write
     steps:
-      - name: Check if release PR
+      - name: Check if release PR or Dependabot PR
         id: check
         run: |
           if [[ "${{ github.head_ref }}" == changeset-release/* ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "Release PR — skipping changeset creation"
+          elif [[ "${{ github.actor }}" == "dependabot[bot]" ]]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "Dependabot PR — skipping changeset creation"
           else
             echo "skip=false" >> $GITHUB_OUTPUT
           fi
