refactor(tokens): convert generator to ESM, resolve mix tokens to static hex
- Convert scripts/generate-tokens.cjs to ESM (generate-tokens.js)
- Import computeColorMix from color-utils.js to resolve color-mix() at build time
- Add buildRegistry() to flatten all token JSON into a dot-path Map
- Add resolveToHexPair() to recursively resolve token refs to {light, dark} hex pairs
- Update processDeriveExtension() for method="mix" to emit light-dark(#hex, #hex)
  instead of color-mix(in oklch, ...) — shade-1 through shade-12 and all tone variants
- Fix computeColorMix() achromatic hue handling (threshold 0.02) to match CSS
  color-mix(in oklch) powerless-hue behavior; prevents blue→green drift when mixing
  chromatic colors with near-white (#fefefa)
- Add colors.generated.tokens.css to globals.css so --color-red-50 etc. are
  available to all consumers without an extra import
- Add Color Scales section to colors.stories.tsx: compact 40px swatch strips
  per hue (red→neutral), steps 50–950; show hex value on Color Primitives swatches

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -34,10 +34,10 @@
   "scripts": {
     "build": "npm run build:generate && npm run build:legacy",
     "build:generate": "node --experimental-json-modules ./scripts/generate-scales.js",
-    "build:legacy": "node ../../scripts/generate-tokens.cjs",
+    "build:legacy": "node ../../scripts/generate-tokens.js",
     "build:sd": "style-dictionary build --config style-dictionary.config.js",
-    "dev": "node ../../scripts/generate-tokens.cjs",
-    "watch": "nodemon --watch src/json --ext tokens.json --exec \"node ../../scripts/generate-tokens.cjs\"",
+    "dev": "node ../../scripts/generate-tokens.js",
+    "watch": "nodemon --watch src/json --ext tokens.json --exec \"node ../../scripts/generate-tokens.js\"",
     "lint": "echo 'No linting for CSS tokens'",
     "lint:tokens": "ajv validate -s dtcg.schema.json -d 'src/json/**/*.tokens.json'",
     "format": "prettier --write \"src/**/*.css\" \"src/**/*.json\"",
