--- a/.github/workflows/test-changed-packages.yml
+++ b/.github/workflows/test-changed-packages.yml
@@ -5,9 +5,6 @@ on:
     branches: [main]
   push:
     branches: [main]
-  workflow_run:
-    workflows: ["Auto Changeset"]
-    types: [completed]
 
 jobs:
   test:
@@ -15,14 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     concurrency:
-      group: test-${{ github.event.workflow_run.head_branch || github.head_ref || github.ref }}
+      group: test-${{ github.head_ref || github.ref }}
       cancel-in-progress: true
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.workflow_run.head_sha || github.sha }}
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
@@ -61,14 +56,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     concurrency:
-      group: lint-${{ github.event.workflow_run.head_branch || github.head_ref || github.ref }}
+      group: lint-${{ github.head_ref || github.ref }}
       cancel-in-progress: true
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.workflow_run.head_sha || github.sha }}
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
