--- a/.github/workflows/auto-changeset.yml
+++ b/.github/workflows/auto-changeset.yml
@@ -11,189 +11,48 @@ jobs:
     name: Auto Changeset Check
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      pull-requests: write
-      statuses: write
+      contents: read
+
     steps:
-      - name: Check if PR should skip auto changeset
-        id: check
+      - name: Skip for release and bot PRs
+        id: gate
         run: |
           if [[ "${{ github.head_ref }}" == changeset-release/* ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
-            echo "Release PR — skipping changeset creation"
+            echo "Release PR — skipping changeset check"
           elif [[ "${{ github.actor }}" == "dependabot[bot]" ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
-            echo "Dependabot PR — skipping changeset creation"
-          elif [[ "${{ github.actor }}" == "github-actions[bot]" ]]; then
-            echo "skip=true" >> $GITHUB_OUTPUT
-            echo "GitHub Actions PR — skipping changeset creation"
+            echo "Dependabot PR — skipping changeset check"
           else
             echo "skip=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Checkout Repo
-        if: steps.check.outputs.skip != 'true'
+      - name: Checkout
+        if: steps.gate.outputs.skip != 'true'
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.head_ref }}
           fetch-depth: 0
 
-      - name: Check PAT token availability
-        if: steps.check.outputs.skip != 'true'
-        id: auth
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          if [ -n "$PAT_TOKEN" ]; then
-            echo "has_pat=true" >> $GITHUB_OUTPUT
-          else
-            echo "has_pat=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Check for new changesets in PR
-        if: steps.check.outputs.skip != 'true'
-        id: changeset_check
+      - name: Validate changeset
+        if: steps.gate.outputs.skip != 'true'
         run: |
           git fetch origin "${{ github.base_ref }}" --depth=1
 
           CHANGED_FILES=$(git diff --name-only "origin/${{ github.base_ref }}...HEAD")
 
-          NEW_CHANGESETS=$(echo "$CHANGED_FILES" | grep -c '^\\.changeset/.*\\.md$' || true)
           CHANGED_PACKAGE_COUNT=$(echo "$CHANGED_FILES" | awk -F/ '/^packages\/[^/]+\// { print $2 }' | sort -u | wc -l | tr -d ' ')
+          NEW_CHANGESETS=$(echo "$CHANGED_FILES" | grep -cE '^\.changeset/.+\.md$' || true)
 
-          echo "new_changeset_count=$NEW_CHANGESETS" >> $GITHUB_OUTPUT
-          echo "changed_package_count=$CHANGED_PACKAGE_COUNT" >> $GITHUB_OUTPUT
+          if [ "${CHANGED_PACKAGE_COUNT:-0}" -eq 0 ]; then
+            echo "No package changes detected — changeset not required."
+            exit 0
+          fi
 
           if [ "${NEW_CHANGESETS:-0}" -gt 0 ]; then
-            echo "needs_changeset=false" >> $GITHUB_OUTPUT
-            echo "Found $NEW_CHANGESETS new changeset(s) — skipping creation"
-          elif [ "${CHANGED_PACKAGE_COUNT:-0}" -eq 0 ]; then
-            echo "needs_changeset=false" >> $GITHUB_OUTPUT
-            echo "No package changes detected — skipping changeset creation"
-          else
-            echo "needs_changeset=true" >> $GITHUB_OUTPUT
+            echo "Found $NEW_CHANGESETS changeset(s) — OK."
+            exit 0
           fi
 
-      - name: Create automatic changeset
-        if: steps.check.outputs.skip != 'true' && steps.changeset_check.outputs.needs_changeset == 'true' && steps.auth.outputs.has_pat == 'true'
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-          PR_TITLE: ${{ github.event.pull_request.title }}
-          PR_BODY: ${{ github.event.pull_request.body }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          CHANGESET_ID=$(openssl rand -hex 8)
-
-          if [ -z "$PR_TITLE" ]; then
-            PR_TITLE="chore: automatic patch release"
-          fi
-
-          if [[ ! "$PR_TITLE" =~ \(#[0-9]+\)$ ]]; then
-            PR_TITLE="${PR_TITLE} (#${PR_NUMBER})"
-          fi
-
-          CHANGED_FILES=$(git diff --name-only "origin/${{ github.base_ref }}...HEAD" -- 'packages/')
-          PACKAGES=$(find packages -maxdepth 1 -type d -not -name "packages" -exec basename {} \; | sort)
-          CHANGED_PACKAGES=()
-
-          for pkg in $PACKAGES; do
-            if echo "$CHANGED_FILES" | grep -q "^packages/$pkg/"; then
-              CHANGED_PACKAGES+=("$pkg")
-            fi
-          done
-
-          {
-            echo "---"
-            if [ ${#CHANGED_PACKAGES[@]} -gt 0 ]; then
-              for pkg in "${CHANGED_PACKAGES[@]}"; do
-                echo "\"@uiid/$pkg\": patch"
-              done
-            else
-              for pkg in $PACKAGES; do
-                echo "\"@uiid/$pkg\": patch"
-              done
-            fi
-            echo "---"
-            echo ""
-            echo "$PR_TITLE"
-          } > .changeset/${CHANGESET_ID}.md
-
-          git add .changeset/${CHANGESET_ID}.md
-          git commit -m "chore: add automatic changeset for PR"
-          git push "https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git" "HEAD:${{ github.head_ref }}"
-
-      - name: Add or update comment about changeset
-        if: steps.check.outputs.skip != 'true' && steps.changeset_check.outputs.needs_changeset == 'true' && steps.auth.outputs.has_pat == 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const commentBody = `**🤖 Auto-changeset created**\n\nA changeset was automatically generated from your PR title and description.\n\nTo customize it, edit the \`.changeset/*.md\` file in this PR.`;
-
-            const comments = await github.rest.issues.listComments({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            });
-
-            const botComment = comments.data.find(comment =>
-              comment.user.login === 'github-actions[bot]' &&
-              comment.body.includes('Auto-changeset created')
-            );
-
-            if (botComment) {
-              if (botComment.body !== commentBody) {
-                await github.rest.issues.updateComment({
-                  comment_id: botComment.id,
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  body: commentBody
-                });
-              }
-            } else {
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: commentBody
-              });
-            }
-
-      - name: Add or update comment about missing PAT token
-        if: steps.check.outputs.skip != 'true' && steps.changeset_check.outputs.needs_changeset == 'true' && steps.auth.outputs.has_pat != 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const commentBody = `**⚠️ Auto-changeset skipped**\n\nThis PR needs a changeset, but \`PAT_TOKEN\` is not configured for pushing commits that can trigger required PR checks.\n\nPlease add a changeset manually with \`pnpm changeset\`, or configure \`PAT_TOKEN\` and re-run this workflow.`;
-
-            const comments = await github.rest.issues.listComments({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            });
-
-            const botComment = comments.data.find(comment =>
-              comment.user.login === 'github-actions[bot]' &&
-              comment.body.includes('Auto-changeset skipped')
-            );
-
-            if (botComment) {
-              if (botComment.body !== commentBody) {
-                await github.rest.issues.updateComment({
-                  comment_id: botComment.id,
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  body: commentBody
-                });
-              }
-            } else {
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: commentBody
-              });
-            }
+          echo "::error::This PR changes packages but has no changeset."
+          echo "::error::Run 'pnpm changeset' locally and commit the generated .changeset/*.md file."
+          exit 1
